fiexd back-to-top btn

--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
     </main>
     <!-- <------------------footer section ---------------------> 
      <footer>
-        <div class="back-to-top">
-            <a href="#header">Back to top</a>
-        </div>
+        <a href="#header" class="back-to-top">Back to top</a>
         <div class="f-cont-1">
             <div class="f-cont-info-1">
                 <div>Get to know us</div>
