--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
         </div>
 
         <div class="f-cont-2">
-            <div>
                 <div class="f-cont2-img">
-
+                    <a href="#">Amazon</a>
                 </div>
                 <div class="nav-footer-line">
                     <button class="language">
@@ -158,7 +157,6 @@
 
                     </button>
                 </div>
-            </div>
         </div>
 
         <div class="f-cont-3">
